# FFmpegApp2

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dr/ffmpeg/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/demo01/: CMakeLists.txt  demo01.cpp
app/src/main/cpp/demo02/: CMakeLists.txt  demo02.cpp
app/src/main/cpp/demo03/: CMakeLists.txt  demo03.cpp
app/src/main/cpp/demo04/: CMakeLists.txt  demo04.cpp
app/src/main/cpp/demo05/: CMakeLists.txt  demo05.cpp
app/src/main/cpp/include/: my_log.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/java/com/dr/ffmpeg/app/: BaseActivity.java  Demo01Activity.java  Demo02Activity.java  Demo03Activity.java  Demo04Activity.java  Demo05Activity.java  MainActivity.java  MyApplication.java
app/src/main/java/com/dr/ffmpeg/jni/: FFmpegJNIManager.java  FFmpegJNIManager1.java  FFmpegJNIManager2.java  FFmpegJNIManager3.java  FFmpegJNIManager4.java  FFmpegJNIManager5.java  JNILogInfoCallBack.java  JNIManager.java
app/src/main/res/layout/: activity_demo01.xml  activity_demo02.xml  activity_demo04.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dr/ffmpeg/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
